fix: fix background, slider

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -49,6 +49,7 @@
       <div class="author"></div>
     </div>
   </footer>
+  <!-- <script src="js/data.json"></script> -->
   <script src="js/script.js"></script>
 </body>
 </html>
