add: html progress player

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -11,10 +11,27 @@
 <body>
   <header class="header">
     <div class="player">
-      <div class="player-controls">
-        <button class="play-prev player-icon"></button>
-        <button class="play player-icon"></button>
-        <button class="play-next player-icon"></button>
+      <div class="sound-track">hhh</div>
+      <div class="progress">
+        <div class="timeline">
+          <div class="duration-sound"></div>
+        </div>
+        <div class="player-time">
+          <div class="timer-play">00:00</div>
+          <div>/</div>
+          <div class="duration"></div>
+        </div>
+      </div>
+      <div class="player-button">
+        <div class="player-controls">
+          <button class="play-prev player-icon"></button>
+          <button class="play player-icon"></button>
+          <button class="play-next player-icon"></button>
+        </div>
+        <div class="player-volume">
+          <button class="button-volume"></button>
+          <input type="range" class="sound-volume">
+        </div>
       </div>
       <ul class="play-list"></ul>
     </div>
