add: html+css todoList

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -68,11 +68,28 @@
         <div class="author"></div>
       </div>
     </div>
+    <div class="todolist-icon"></div>
     <div class="todolist-container">
-
+      <div class="close-todo-list"></div>
+      <p class="todolist-title">ToDoList</p>
+      <div class="todo-wrapper">
+        <input type="text" class="task-discription" placeholder="Add your new todo">
+        <button class="add-task-btn">Add</button>
+      </div>
+      <p class="title-list">My list:</p>
+      <div class="todo-wrapper">
+        <div class="todo-item">
+          <div class="task-wrapper">
+            <input class="btn-complete-task" type="checkbox" id="task">
+            <label for="task" class="text-task">Go to the park</label>
+          </div>
+          <button class="btn-delete-task"></button>
+        </div>
+      </div>
     </div>
     <div class="settings-menu">
       <div class="close-menu"></div>
+      <p class="settings-title">Settings</p>
       <div class="language-container">
         <div class="name-setting-language">language</div>
         <div class="language-en">EN</div>
