add: modifie css

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -72,7 +72,7 @@
     <div class="todolist-container">
       <div class="close-todo-list"></div>
       <p class="todolist-title">ToDoList</p>
-      <div class="todo-wrapper">
+      <div class="todo-wrapper-input">
         <input type="text" class="task-discription" placeholder="Add your new todo">
         <button class="add-task-btn">Add</button>
       </div>
