--- a/momentum/index.html
+++ b/momentum/index.html
@@ -68,16 +68,18 @@
         <div class="author"></div>
       </div>
     </div>
-    <div class="todolist-icon"></div>
-    <div class="todolist-container">
-      <div class="close-todo-list"></div>
-      <p class="todolist-title">ToDoList</p>
-      <div class="todo-wrapper-input">
-        <input type="text" class="task-discription" placeholder="Add your new todo">
-        <button class="add-task-btn">Add</button>
-      </div>
-      <p class="title-list">My list:</p>
-      <div class="todo-wrapper">
+    <div class="todo-wrapper-all">
+      <div class="todolist-icon"></div>
+      <div class="todolist-container">
+        <div class="close-todo-list"></div>
+        <p class="todolist-title">ToDoList</p>
+        <div class="todo-wrapper-input">
+          <input type="text" class="task-discription" placeholder="Add your new todo">
+          <button class="add-task-btn">Add</button>
+        </div>
+        <p class="title-list">My list:</p>
+        <div class="todo-wrapper">
+        </div>
       </div>
     </div>
     <div class="settings-menu">
