fix: fix heigjt

--- a/momentum/index.html
+++ b/momentum/index.html
@@ -150,6 +150,6 @@
       </div>
     </div>
   </footer>
-  <script type="module" src="js/script.js"></script>
+  <script type="module" defer src="js/script.js"></script>
 </body>
 </html>
